# cableway

./: .gitignore
autocad_plugin/: ExportCommand.cs  ExportEntitiesPlugin.csproj  cwConversor.cs  json2dwg.cs
data/qt/: DrawingWindow.ui  MainWindow.ui
data/tests/: drawing2.dwg  input_circuits.xls  input_circuits2.xls  user_params.xls  user_params2.xls
data/tests/complete_test1/: CircuitsReport_fixtures.csv  input_circuits.xls  user_params.xls
prj/: CMakeLists.txt
src/: CweLoader.cpp  CweLoader.h  Debug.cpp  Debug.h  DrawingLoader.cpp  DrawingLoader.h  DwgLoader.cpp  DwgLoader.h  GLCoords.cpp  GLCoords.h  Graph.cpp  Graph.h  GraphBuilder.cpp  InputCircuitsReader.cpp  InputCircuitsReader.h  MainExecution.cpp  MainExecution.h  Reports.cpp  Reports.h  TDesenho.h  UArmazenamentoCircuitos.h  UAuxString.cpp  UAuxString.h  UCallbacks.cpp  UCallbacks.h  UColorTable.h  UConfig.cpp  UConfig.h  UContainerDesenhos.cpp  UContainerDesenhos.h  UDadosGenerico.cpp  UDadosGenerico.h  UDebug.cpp  UDebug.h  UDefines.cpp  UDefines.h  UErros.cpp  UErros.h  UFila.cpp  UFila.h  (+39 more)
src/Electrical/: ArcCable.cpp  ArcCable.h  Bandeirola.cpp  Bandeirola.h  EdgeConnector.h  ElectricalElement.cpp  ElectricalElement.h  ElectricalElements.h  ElectricalElementsBuilder.cpp  ElectricalElementsBuilder.h  GeometricEdges.h  Instrument.cpp  Instrument.h  StraightCable.cpp  StraightCable.h
src/ScreenDrawing/: GLCoords.cpp  UMostraDesenho.cpp  UMostraDesenho.h  UOpenGL.cpp  UOpenGL.h
src/UserParams/: LoadUserParams.cpp  LoadUserParams.h  UserParams.cpp  UserParams.h
src/file/: CsvReader.cpp  CweLoader.cpp  InputCircuitsReader.cpp  InputCircuitsReader.h
src/interface/: DrawingWindow.cpp  DrawingWindow.h  MainWindow.cpp  MainWindow.h
src/presenters/: DrawingPresenter.cpp  DrawingPresenter.h  MainPresenter.cpp  MainPresenter.h
src/tests/: DrawingLoaderTests.cpp  File2FileTests.cpp  InputCircuitsReaderTests.cpp  TestsUtil.cpp  TestsUtil.h  UserParamsLoadingTests.cpp  basic_tests.cpp  main_tests.cpp
